--- a/front/package.json
+++ b/front/package.json
@@ -29,6 +29,7 @@
     "@types/react-dom": "18.0.9",
     "aos": "^2.3.4",
     "axios": "^1.2.1",
+    "dompurify": "^3.0.0",
     "eslint": "8.29.0",
     "eslint-config-next": "^12.0.4",
     "firebase": "^9.16.0",
@@ -45,6 +46,7 @@
     "react-dom": "18.2.0",
     "react-material-ui-carousel": "^3.4.2",
     "react-webcam": "^7.0.1",
+    "sanitize-html": "^2.10.0",
     "styled-components": "^5.3.6",
     "tailwindcss": "^3.2.4",
     "tensorflow-models": "^0.0.1",
@@ -53,9 +55,11 @@
   },
   "devDependencies": {
     "@types/aos": "^3.0.4",
+    "@types/dompurify": "^2.4.0",
     "@types/mui-datatables": "^4.3.0",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.11.18",
+    "@types/sanitize-html": "^2.8.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20"
   }
